# RocketEquation

./: README.md  RocketEquation.ipynb  data_acquisition.ipynb  locations.csv  pyproject.toml  rocket_stages_dataset.csv  rockets_dataset.csv
