[project]
name = "rocketequation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipywidgets>=8.1.7",
    "jupyter>=1.1.1",
    "jupyterlab>=4.4.3",
    "lxml>=6.0.0",
    "matplotlib>=3.10.3",
    "networkx>=3.5",
    "np>=1.0.2",
    "pandas>=2.3.0",
    "seaborn>=0.13.2",
]
